# tinker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conversations.db  demo_phase_5_1.py  docker-compose.yml  pyproject.toml  test_ai_clients.py  test_email.py  tinker-ssh
.github/: copilot-instructions.md
docs/: design-document.md  docker-compose-migration.md  docker.md  github-auth-fixes.md  mvp.md  phase 1.md  phase-1.3.md  phase-2.1.md  phase-2.2.md  phase-2.3.md  phase-2.4.md  phase-2.5.md  phase-2.6.md  phase-2.7.md  phase-3.1.md  phase-3.2.md  phase-4.1.md  phase-4.2.md  phase-4.3.md  phase-4.4.md  phase-4.5.md  phase-5.0.md  phase-5.1-completion.md  phase-5.1.md  phase-5.2.md  phase-5.3.md  phase-5.4.md  phase-5.5.md  phase-6.0.md  phase-6.1.md  phase-6.2.md  phase-6.3.md  phase-6.4.md  phase1.md  phase2.md  phase3.md  phase4.md  prompt-analysis-and-improvements.md
docs/sample-tasks/: task--1.1--create-virtual-environment.md  task--1.5--list github issues.md  task--1.6--create repo.md  task--2.1--create-file.md  task--2.2--multi-step.md  task--4.3--find-bugs.md
sample/: task--1.2--grep.md  task--1.2--send-mail.md  task--1.4--git-clone.md
src/tinker/: animation_utils.py  anthropic_tools_manager.py  checkpoint_manager.py  constants.py  continuous_agent_nodes.py  continuous_agent_state.py  continuous_agent_workflow.py  docker_manager.py  email_manager.py  github_manager.py  langchain_tools.py  langgraph_nodes.py  langgraph_state.py  langgraph_workflow.py  main.py  tools_manager.py
tests/: test_backward_compatibility.py  test_checkpoint_manager.py  test_langgraph_basic.py
