[tool.poetry]
name = "tinker"
version = "0.1.0"
description = ""
authors = ["Sprited Dev <dev@sprited.app>"]
readme = "README.md"
packages = [{ include = "tinker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
tinker = "tinker.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"