[tool.poetry]
name = "tinker"
version = "0.1.0"
description = ""
authors = ["Sprited Dev <dev@sprited.app>"]
readme = "README.md"
packages = [{ include = "tinker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
anthropic = "^0.52.0"
python-dotenv = "^1.1.0"
secure-smtplib = "^0.1.1"
email-validator = "^2.1.0"
langgraph = "^0.4.8"
langchain = "^0.3.25"
langchain-openai = "^0.3.21"
langchain-anthropic = "^0.3.15"
langgraph-checkpoint-sqlite = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
tinker = "tinker.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"